[tool.poetry]
name = "uspto-check"
version = "0.1.0"
description = ""
authors = ["Rodrigo Vieira <rodrigo.vieira@vinta.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beepy = "^1.0.7"
requests = "^2.31.0"
argparse = "^1.4.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
